// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`computeSchemaComponents Float without decimals 1`] = `
{
  "ObjectName": {
    "description": undefined,
    "example": {
      "number2": 312.53387874865376,
    },
    "properties": {
      "number2": {
        "type": "number",
      },
    },
    "required": [
      "number2",
    ],
    "type": "object",
  },
  "ObjectNameForResponse": {
    "description": undefined,
    "properties": {
      "number2": {
        "type": "number",
      },
    },
    "type": "object",
  },
  "ObjectNameForUpdate": {
    "description": undefined,
    "example": {
      "number2": 312.53387874865376,
    },
    "properties": {
      "number2": {
        "type": "number",
      },
    },
    "type": "object",
  },
}
`;

exports[`computeSchemaComponents Integer dataType with decimals 1`] = `
{
  "ObjectName": {
    "description": undefined,
    "example": {
      "number1": 420.981408197018,
    },
    "properties": {
      "number1": {
        "type": "number",
      },
    },
    "required": [
      "number1",
    ],
    "type": "object",
  },
  "ObjectNameForResponse": {
    "description": undefined,
    "properties": {
      "number1": {
        "type": "number",
      },
    },
    "type": "object",
  },
  "ObjectNameForUpdate": {
    "description": undefined,
    "example": {
      "number1": 420.981408197018,
    },
    "properties": {
      "number1": {
        "type": "number",
      },
    },
    "type": "object",
  },
}
`;

exports[`computeSchemaComponents Integer with a 0 decimals 1`] = `
{
  "ObjectName": {
    "description": undefined,
    "example": {
      "number3": 240.28247834791884,
    },
    "properties": {
      "number3": {
        "type": "integer",
      },
    },
    "required": [
      "number3",
    ],
    "type": "object",
  },
  "ObjectNameForResponse": {
    "description": undefined,
    "properties": {
      "number3": {
        "type": "integer",
      },
    },
    "type": "object",
  },
  "ObjectNameForUpdate": {
    "description": undefined,
    "example": {
      "number3": 240.28247834791884,
    },
    "properties": {
      "number3": {
        "type": "integer",
      },
    },
    "type": "object",
  },
}
`;
